--- a/docs/faststore/components/molecules/region-bar.mdx
+++ b/docs/faststore/components/molecules/region-bar.mdx
@@ -1,6 +1,6 @@
 ---
 title: "RegionBar"
-excerpt: Acts as a custom Button, usually used on mobile devices only. It should trigger the `RegionModal`.
+excerpt: Acts as a custom Button, usually only used on mobile devices. It should trigger the `RegionModal`.
 keywords:
   - UI library
   - ecommerce
@@ -11,9 +11,9 @@ components:
   - RegionBar.tsx
 ---
 
-The `RegionBar` is a custom Button, usually used on mobile devices only. It should trigger the [RegionModal](https://developers.vtex.com/docs/guides/faststore/organisms-region-modal).
+The `RegionBar` is a custom Button, usually only used only on mobile devices only. It should trigger the [RegionModal](https://developers.vtex.com/docs/guides/faststore/organisms-region-modal).
 
-The component is part of [Regionalization](https://developers.vtex.com/docs/guides/faststore/feature-regionalization) feature.
+The component is part of the [Regionalization](https://developers.vtex.com/docs/guides/faststore/feature-regionalization) feature.
 
 
 ## Overview
