Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/components/molecules/region-bar.mdx
+++ b/docs/faststore/components/molecules/region-bar.mdx
@@ -1,6 +1,6 @@
 ---
 title: "RegionBar"
-excerpt: Acts as a custom Button, usually used only on mobile devices. It should trigger the `RegionModal`.
+excerpt: This component acts as a custom button, typically used only on mobile devices, and should trigger the `RegionModal`.
 keywords:
   - UI library
   - ecommerce
@@ -11,7 +11,7 @@ components:
   - RegionBar.tsx
 ---
 
-The `RegionBar` is a custom Button, usually used only on mobile devices. It should trigger the [RegionModal](https://developers.vtex.com/docs/guides/faststore/organisms-region-modal).
+The `RegionBar` is a custom button, usually used only on mobile devices. It should trigger the [RegionModal](https://developers.vtex.com/docs/guides/faststore/organisms-region-modal).
 
 The component is part of the [Regionalization](https://developers.vtex.com/docs/guides/faststore/feature-regionalization) feature.
 
