--- a/docs/faststore/components/molecules/region-bar.mdx
+++ b/docs/faststore/components/molecules/region-bar.mdx
@@ -1,6 +1,6 @@
 ---
 title: "RegionBar"
-excerpt: This component acts as a custom button, typically used only on mobile devices, and should trigger the `RegionModal`.
+excerpt: This component acts as a custom button, typically used only on mobile devices and should trigger the `RegionModal`.
 keywords:
   - UI library
   - ecommerce
