Apply suggestions from code review
Co-authored-by: Carolina Menezes <60782333+carolinamenezes@users.noreply.github.com>

--- a/docs/faststore/components/molecules/region-bar.mdx
+++ b/docs/faststore/components/molecules/region-bar.mdx
@@ -1,6 +1,6 @@
 ---
 title: "RegionBar"
-excerpt: This component acts as a custom button, typically used only on mobile devices, and should trigger the `RegionModal`.
+excerpt: This component is a custom button, designed primarily for mobile devices, that triggers the `RegionModal`.
 keywords:
   - UI library
   - ecommerce
