Review title and introduction

--- a/docs/faststore/components/features/delivery-promise/components.mdx
+++ b/docs/faststore/components/features/delivery-promise/components.mdx
@@ -1,12 +1,11 @@
 ---
-title: "Delivery Promise components"
+title: "Working Delivery Promise components"
+excerpt: "Explore the core components of the Delivery Promise feature in FastStore, their functionalities, and how they integrate into your store."
 ---
 
 >ℹ This feature is in closed beta, meaning only selected customers can access it. If you're interested in implementing it, please contact our [Support](https://support.vtex.com/hc/en-us) team.
 
-This guide explains the components of the [Delivery Promise](https://developers.vtex.com/docs/guides/faststore/delivery-promise-overview) feature for FastStore. It describes the structure of these parts and highlights the customizations needed when modifying standard sections like `NavBar` and `ProductGallery`. 
-
-You'll learn which components can be reused and which require customization, illustrating the connection between native implementation and customization.
+This guide provides an overview of the [Delivery Promise](https://developers.vtex.com/docs/guides/faststore/delivery-promise-overview) components for FastStore. You will understand the purpose of each component, how they function, and where they are located within the FastStore architecture. This knowledge will help you effectively implement and customize the Delivery Promise feature in your store.
 
 >⚠️ To learn how to implement Delivery Promise in your store, see the guide [Implementing Delivery Promise](https://developers.vtex.com/docs/guides/faststore/delivery-promise-implementation).
 
