--- a/docs/faststore/components/features/delivery-promise/components.mdx
+++ b/docs/faststore/components/features/delivery-promise/components.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Working Delivery Promise components"
-excerpt: "Explore the core components of the Delivery Promise feature in FastStore, their functionalities, and how they integrate into your store."
+title: "Understanding Delivery Promise components"
+excerpt: "Explore the core components of the Delivery Promise feature in FastStore, their functions, and how they integrate into your store."
 ---
 
->ℹ This feature is in closed beta, meaning only selected customers can access it. If you're interested in implementing it, please contact our [Support](https://support.vtex.com/hc/en-us) team.
+>ℹ This feature is in closed beta, meaning that only selected customers can access it. If you're interested in implementing it, please contact our [Support](https://support.vtex.com/hc/en-us) team.
 
 This guide provides an overview of the [Delivery Promise](https://developers.vtex.com/docs/guides/faststore/delivery-promise-overview) components for FastStore. You will understand the purpose of each component, how they function, and where they are located within the FastStore architecture. This knowledge will help you effectively implement and customize the Delivery Promise feature in your store.
 
@@ -27,7 +27,7 @@ Its behavior is context-dependent:
 
 ![RegionButton](https://vtexhelp.vtexassets.com/assets/docs/src/region-button___ccb03f5e9e36d837a4b03aae6a0a58ff.png)
 
-If you have customized the `NavBar`, you can still use the native `RegionButton` by integrating it into your custom NavBar component. However, depending on your customization, you may need to implement your own version of `RegionButton`.
+If you have customized the `NavBar`, you can still use the native `RegionButton` by integrating it into your custom `NavBar` component. However, depending on your customization, you may need to implement your own version of `RegionButton`.
 
 This component leverages the following:
 
@@ -36,7 +36,7 @@ This component leverages the following:
 
 ### RegionModal
 
-`RegionModal` is a component that serves as a section under the Global Sections content type in the Headless CMS. It contains logic to enforce mandatory location entry if specified in the `discovery.config.js` file, which means the modal cannot be closed without providing a location. It checks for valid postal codes and verifies product availability for the given location.
+`RegionModal` is a component that serves as a section under the Global Sections content type in the Headless CMS. It contains logic to enforce mandatory location entry if specified in the `discovery.config.js` file, which means that the modal cannot be closed without providing a location. It checks for valid postal codes and verifies product availability for the given location.
 
 ![RegionModal](https://vtexhelp.vtexassets.com/assets/docs/src/region-modal___6352f280eeb8eb77ee4674a5caf4f328.png)
 
@@ -81,13 +81,13 @@ This component leverages the following:
 
 The `RegionSlider` component enables shoppers to manage their delivery-related location settings and pickup point filters in the Product Listing Pages (PLPs) or search pages. This component is implemented as a Global Section, making it available throughout the store. It is compatible with mobile and desktop browsers.
 
-It includes three interaction types: setting a new location (when no postal code is set), changing an existing location (when a postal code is set), and selecting a pickup point (for filtering) to refine delivery options.
+It includes three interaction types: setting a new location (when no postal code is set); changing an existing location (when a postal code is set); and selecting a pickup point (for filtering) to refine delivery options.
 
-* **No postal code set:** The user clicks the `Set location` button, and the `RegionSlider` appears, allowing them to set a postal code.
+* **No postal code set:** The user clicks the `Set location` button, and the `RegionSlider` appears, allowing the user to set a postal code.
 
 ![setLocation](https://vtexhelp.vtexassets.com/assets/docs/src/set-location___8887a7be647d76a0584e1b977233a672.png)
 
-* **Postal code set:** The user clicks the postal code link, and the `RegionSlider` appears, allowing them to change the location.
+* **Postal code set:** The user clicks the postal code link, and the `RegionSlider` appears, allowing the user to change the location.
 
 ![changeLocation](https://vtexhelp.vtexassets.com/assets/docs/src/change-location___ada68e0df1bac1e8a20abc9040dbf82f.png)
 
