Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/components/features/delivery-promise/components.mdx
+++ b/docs/faststore/components/features/delivery-promise/components.mdx
@@ -5,13 +5,13 @@ excerpt: "Explore the core components of the Delivery Promise feature in FastSto
 
 >ℹ This feature is in closed beta, meaning that only selected customers can access it. If you're interested in implementing it, please contact our [Support](https://support.vtex.com/hc/en-us) team.
 
-This guide provides an overview of the [Delivery Promise](https://developers.vtex.com/docs/guides/faststore/delivery-promise-overview) components for FastStore. You will understand the purpose of each component, how they function, and where they are located within the FastStore architecture. This knowledge will help you effectively implement and customize the Delivery Promise feature in your store.
+This guide provides an overview of the [Delivery Promise](https://developers.vtex.com/docs/guides/faststore/delivery-promise-overview) components for FastStore. You will understand the purpose of each component, how they function, and where they are located in the FastStore architecture. This knowledge will help you effectively implement and customize the Delivery Promise feature in your store.
 
 >⚠️ To learn how to implement Delivery Promise in your store, see the guide [Implementing Delivery Promise](https://developers.vtex.com/docs/guides/faststore/delivery-promise-implementation).
 
 ## Components
 
-Delivery Promise introduces a set of modular components and hooks. These are organized within the FastStore core and UI packages and inserted into key sections. This guide focuses on the core components provided by the `@faststore/core` package, which are included by default in the FastStore source code, such as those found in the FastStore starter. Learn more about the packages in [Understanding the project structure](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#packagejson).
+Delivery Promise introduces a set of modular components and hooks. These are organized in the FastStore core and UI packages and integrated into key sections. This guide focuses on the core components provided by the `@faststore/core` package, which are included by default in the FastStore source code, for example, those found in the FastStore starter. To learn more about the packages, see [Understanding the project structure](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#packagejson).
 
 Below are the core components related to the Delivery Promise feature in FastStore.
 
@@ -21,7 +21,7 @@ Below are the core components related to the Delivery Promise feature in FastSto
 
 Its behavior is context-dependent:
 
-- If a shopper hasn't added a postal code, a `Popover` is displayed, and the button label adjusts based on whether a default postal code is present.
+- If a shopper hasn't added a postal code, a `Popover` is displayed, and the button label adjusts depending on whether a default postal code is present.
 - If a postal code is set, the button shows the location and suppresses the `Popover`.
 - When a shopper sets their location, the [`RegionModal`](#regionmodal) component is triggered.
 
@@ -36,7 +36,7 @@ This component leverages the following:
 
 ### RegionModal
 
-`RegionModal` is a component that serves as a section under the Global Sections content type in the Headless CMS. It contains logic to enforce mandatory location entry if specified in the `discovery.config.js` file, which means that the modal cannot be closed without providing a location. It checks for valid postal codes and verifies product availability for the given location.
+`RegionModal` is a component that serves as a section under the Global Sections content type in the Headless CMS. It contains logic to enforce mandatory location entry if specified in the `discovery.config.js` file, which means the modal cannot be closed without providing a location. It checks for valid postal codes and verifies product availability for the given location.
 
 ![RegionModal](https://vtexhelp.vtexassets.com/assets/docs/src/region-modal___6352f280eeb8eb77ee4674a5caf4f328.png)
 
@@ -47,11 +47,11 @@ This component leverages the following:
 
 ### RegionBar
 
-`RegionBar` is a mobile-only component that acts as a section under the Global Sections content type in the Headless CMS.
+`RegionBar` is a mobile-only component that serves as a section under the Global Sections content type in the Headless CMS.
 
 Its behavior is context-dependent:
 
-- If a shopper hasn't added a postal code, a `Popover` is displayed, and the button label adjusts based on whether a default postal code is present.
+- If a shopper hasn't added a postal code, a `Popover` is displayed, and the button label adjusts depending on whether a default postal code is present.
 - If a postal code is set, the button shows the location and suppresses the `Popover`.
 - When a shopper sets their location, the [`RegionModal`](#regionmodal) component is triggered.
 
