--- a/docs/faststore/docs/getting-started/requirements.mdx
+++ b/docs/faststore/docs/getting-started/requirements.mdx
@@ -7,11 +7,11 @@ updatedAt: "2025-09-09T10:00:00.813Z"
 
 Before starting a FastStore project, you must have the necessary tools and apps installed in your VTEX account. This guide walks you through the required steps to ensure you have everything set up correctly.
 
-## 1. Installing VTEX IO CLI on your machine
+## Step 1. Installing VTEX IO CLI on your machine
 
 The VTEX IO CLI is the command-line interface you'll use to manage your VTEX projects. If you haven't already done so, install it on your machine. For detailed instructions, refer to the [this guide](https://developers.vtex.com/vtex-developer-docs/docs/vtex-io-documentation-vtex-io-cli-installation-and-command-reference).
 
-## 2. Installing Headless CMS and its dependencies
+## Step 2. Installing Headless CMS and its dependencies
 
 [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview) is the content management solution for FastStore projects. During the [Onboarding](https://developers.vtex.com/docs/guides/faststore/getting-started-overview), the integration between your project and Headless CMS is initiated.
 
@@ -49,7 +49,7 @@ If yes, proceed to check the [next requirement](https://developers.vtex.com/docs
 
 Once the app and its dependency are installed, proceed to check the [next requirement](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#3-installing-headless-cms-plugins).
 
-## 3. Installing Headless CMS plugins
+## Step 3. Installing Headless CMS plugins
 
 To ensure you won't get errors while running Headless CMS commands in the CLI, install Headless CMS plugins by following these steps:
 
@@ -79,7 +79,7 @@ Now, check if the installation of Headless CMS plugins was successful by running
 >
 > Remember, we recommend using the latest Node.js version or a version higher than `15.0.0`.
 
-## 4. Enabling the VTEX Intelligent Search app in your account
+## Step 4. Enabling the VTEX Intelligent Search app in your account
 
 The [VTEX Intelligent Search](https://help.vtex.com/tracks/vtex-intelligent-search) app enhances the user experience by providing accurate and personalized search results throughout the shopping journey.
 Before developing a storefront in FastStore, you need to enable the app on your account. For more information on the Intelligent Search and its integration, please refer to the [VTEX Intelligent Search](https://help.vtex.com/tracks/vtex-intelligent-search) and [Integration Settings](https://help.vtex.com/en/tracks/vtex-intelligent-search--19wrbB7nEQcmwzDPl1l4Cb/6wKQgKmu2FT6084BJT7z5V) guides.
@@ -111,7 +111,7 @@ After successfully installing the app, integrate it by accessing the VTEX Admin,
 
 If you are using a different major version and want to migrate, please [open a ticket with VTEX Support](https://help.vtex.com/en/support) and request the installation of the Edition app `vtex.edition-store@5.x`.
 
-## 5. Installing the FastStore WebOps app
+## Step 5. Installing the FastStore WebOps app
 
 The [FastStore WebOps app](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) is the first step in creating, setting up, and managing your FastStore project. It also provides deployment and performance insights into your website.
 
