General review and fix typos

--- a/docs/faststore/docs/getting-started/requirements.mdx
+++ b/docs/faststore/docs/getting-started/requirements.mdx
@@ -9,27 +9,27 @@ Before starting a FastStore project, you must have the necessary tools and apps 
 
 ## Step 1. Installing VTEX IO CLI on your machine
 
-The VTEX IO CLI is the command-line interface you'll use to manage your VTEX projects. If you haven't already done so, install it on your machine. For detailed instructions, refer to the [this guide](https://developers.vtex.com/vtex-developer-docs/docs/vtex-io-documentation-vtex-io-cli-installation-and-command-reference).
+The VTEX IO CLI is the command-line interface you'll use to manage your VTEX projects. If you haven't already done so, install it on your machine. For detailed instructions, refer to [this guide](https://developers.vtex.com/vtex-developer-docs/docs/vtex-io-documentation-vtex-io-cli-installation-and-command-reference).
 
 ## Step 2. Installing Headless CMS and its dependencies
 
 [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview) is the content management solution for FastStore projects. During the [Onboarding](https://developers.vtex.com/docs/guides/faststore/getting-started-overview), the integration between your project and Headless CMS is initiated.
 
-To prevent content duplication that could cause build failures during Onboarding, it is important to confirm the installation of the following apps in your account: 
+To prevent content duplication that could cause build failures during the project's onboarding, it is important to confirm the installation of the following apps in your account:
+
 - `vtex.admin-cms@1.x`
 - `vtex.admin-cms-graphql-rc`
 
 To check whether you have them installed, follow the instructions below:
 
-1. Open the terminal and log in to your account using the following command. *Remember to replace `{accountName}` with your account's name.*
+1. Open the terminal and log in to your account using the following command. Remember to replace `{accountName}` with your account name.
 
     ```bash
     vtex login {accountName}
     ```
 
 2. Run `vtex ls` to list all the installed apps in your account.
-3. Check if the `vtex.admin-cms@1.x` and `vtex.admin-cms-graphql-rc` are in the list.
-If yes, proceed to check the [next requirement](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#3-installing-headless-cms-plugins). If not, continue following these instructions.
+3. Check if the `vtex.admin-cms@1.x` and `vtex.admin-cms-graphql-rc` are in the list. If so, proceed to check the [next requirement](#step-3-installing-headless-cms-plugins). Otherwise, continue following these instructions.
 
 4. After logging into your account, install `vtex.admin-cms@1.x` by running the following command:
 
@@ -47,7 +47,7 @@ If yes, proceed to check the [next requirement](https://developers.vtex.com/docs
     vtex install vtex.admin-cms-graphql-rc
     ```
 
-Once the app and its dependency are installed, proceed to check the [next requirement](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#3-installing-headless-cms-plugins).
+Once the app and its dependency are installed, proceed to check the [next requirement](#step-3-installing-headless-cms-plugins).
 
 ## Step 3. Installing Headless CMS plugins
 
@@ -55,7 +55,7 @@ To ensure you won't get errors while running Headless CMS commands in the CLI, i
 
 1. Open the terminal and log in to your VTEX account using the VTEX IO CLI:
 
-    > ⚠️ Remember to replace the values between curly brackets according to your account name.
+    > ⚠️ Remember to replace the values between curly brackets with your account name.
 
     ```bash
     vtex login {account}
@@ -73,41 +73,41 @@ Now, check if the installation of Headless CMS plugins was successful by running
 
 > ⚠️
 >
-> - **Windows user:** If you find problems while installing the plugin, please refer to the [Troubleshooting](https://developers.vtex.com/docs/guides/faststore/troubleshooting-error-installing-headless-cms) article
+> - **Windows user:** If you encounter problems while installing the plugin, please refer to the [Troubleshooting](https://developers.vtex.com/docs/guides/faststore/troubleshooting-error-installing-headless-cms) article
 >
-> - **macOS user:** If you find problems, run `yarn config set ignore-engines true` to ignore the Node.js incompatibility version, then run `vtex plugins install cms` again.
+> - **macOS user:** If you encounter problems, run `yarn config set ignore-engines true` to ignore the Node.js incompatibility version, then run `vtex plugins install cms` again.
 >
 > Remember, we recommend using the latest Node.js version or a version higher than `15.0.0`.
 
 ## Step 4. Enabling the VTEX Intelligent Search app in your account
 
 The [VTEX Intelligent Search](https://help.vtex.com/tracks/vtex-intelligent-search) app enhances the user experience by providing accurate and personalized search results throughout the shopping journey.
-Before developing a storefront in FastStore, you need to enable the app on your account. For more information on the Intelligent Search and its integration, please refer to the [VTEX Intelligent Search](https://help.vtex.com/tracks/vtex-intelligent-search) and [Integration Settings](https://help.vtex.com/en/tracks/vtex-intelligent-search--19wrbB7nEQcmwzDPl1l4Cb/6wKQgKmu2FT6084BJT7z5V) guides.
+Before developing a storefront in FastStore, you need to enable the app on your account. For more information about Intelligent Search and its integration, please refer to the [VTEX Intelligent Search](https://help.vtex.com/tracks/vtex-intelligent-search) and [Integration Settings](https://help.vtex.com/en/tracks/vtex-intelligent-search--19wrbB7nEQcmwzDPl1l4Cb/6wKQgKmu2FT6084BJT7z5V) guides.
 
 To enable the app, check the version of your [Edition Store](https://developers.vtex.com/docs/guides/vtex-io-documentation-edition-app) account.
 
 Based on the edition version, follow the instructions below.
 
-> ℹ️ To confirm which Edition App version is installed in your account, open the terminal and use the VTEX IO CLI. Log in to your account by running `vtex login {accountName}` and run `vtex edition get` to see the Edition App version installed on the current account.
+> ℹ️ To confirm which Edition App version is installed in your account, open the terminal and use the VTEX IO CLI. Log in to your account by running `vtex login {accountName}` and run `vtex edition get` to see the Edition App version installed in the current account.
 
-### Accounts in the `vtex.edition-store@5.x`
+### Accounts using the `vtex.edition-store@5.x`
 
-If your account is using the `vtex.edition-store@5.x` major, the VTEX Intelligent Search app is already included, and you need to integrate the app via VTEX Admin.
+If your account is using the `vtex.edition-store@5.x` major version, the VTEX Intelligent Search app is already included, and you need to integrate the app via VTEX Admin.
 
-To integrate the VTEX Intelligent Search, go to the VTEX Admin, access **Store Settings > Intelligent Search > Integrations**, and click `START INTEGRATION`.
+To integrate VTEX Intelligent Search, go to the VTEX Admin, access **Store Settings > Intelligent Search > Integrations**, and click `START INTEGRATION`.
 
 ### Accounts using an edition version below `5.x`
 
 1. In the VTEX IO CLI, log in to your VTEX account by running `vtex login {accountName}`. *Remember to replace the value between brackets with your account name.*
-2. If the VTEX Intelligent Search app is not installed in your account, run the following for Intelligent Search:
+2. If the VTEX Intelligent Search app is not installed in your account, run the following command to install it:
 
     ```bash
     vtex install vtex.search-resolver@1.x vtex.admin-search@1.x
     ```
 
-After successfully installing the app, integrate it by accessing the VTEX Admin, go to **Store Settings > Intelligent Search > Integrations**, and click `START INTEGRATION`.
+After successfully installing the app, integrate it by accessing VTEX Admin, and navigating to **Store Settings > Intelligent Search > Integrations**, and click `START INTEGRATION`.
 
-### Accounts that want to migrate to the `5.x`</summary>
+### Accounts that want to migrate to the `5.x`
 
 If you are using a different major version and want to migrate, please [open a ticket with VTEX Support](https://help.vtex.com/en/support) and request the installation of the Edition app `vtex.edition-store@5.x`.
 
@@ -116,11 +116,11 @@ If you are using a different major version and want to migrate, please [open a t
 The [FastStore WebOps app](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) is the first step in creating, setting up, and managing your FastStore project. It also provides deployment and performance insights into your website.
 
 > ⚠️ The FastStore WebOps app only works in stores using the [Edition Store](https://developers.vtex.com/docs/guides/vtex-io-documentation-edition-app#list-of-native-edition-apps). If your store is on the Edition Business, also known as using the [Legacy CMS Portal](https://help.vtex.com/es/tracks/cms--2YcpgIljVaLVQYMzxQbc3z/1oN446gRGcR2s70RvBCAmj) technology, make sure to [open a support ticket](https://help-tickets.vtex.com/smartlink/sso/login/zendesk) to change it to the Edition Store.
-Once you have changed the edition, follow the instructions on this [requirements guide](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#install-the-vtex-io-cli-on-your-machine).
+Once you have changed the edition, follow the instructions in this [requirements guide](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#install-the-vtex-io-cli-on-your-machine).
 
 To install the app, follow these steps.
 
-1. In a terminal, log in to your VTEX account by running the following. Replace `{accountName}` with your store account name, for example, `vtex login store`.
+1. In a terminal, log in to your VTEX account by running the following command. Replace `{accountName}` with your store account name, for example, `vtex login store`.
 
     ```bash
     vtex login {accountName}
@@ -131,8 +131,8 @@ To install the app, follow these steps.
     ```bash
     vtex install vtex.webops
     ```
-    
-    > ⚠️ The FastStore WebOps app only works in the production environment, so you must install it only in your account's master environment.
+
+    > ⚠️ The FastStore WebOps app only works in the production environment, so you must install it exclusively in your account's master environment.
 
 3. A confirmation message will appear. Type `y` to proceed.
 
