--- a/docs/faststore/components/features/delivery-promise/components.mdx
+++ b/docs/faststore/components/features/delivery-promise/components.mdx
@@ -11,7 +11,9 @@ This guide provides an overview of the [Delivery Promise](https://developers.vte
 
 ## Components
 
-Delivery Promise introduces a set of modular components and hooks. These components are organized within the FastStore core and UI packages and integrated into key sections. This guide focuses on the core components provided by the `@faststore/core` package, which are included by default in the FastStore source code, for example, those found in the FastStore starter. To learn more about the packages, see [Understanding the project structure](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#packagejson).
+Delivery Promise introduces modular components and hooks organized within the `@faststore/core` and `@faststore/ui` packages. 
+
+This guide focuses on the core components provided by the `@faststore/core` package, which are included by default in FastStore projects. To learn more about the packages, see [Understanding the project structure](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#packagejson).
 
 Below are the core components related to the Delivery Promise feature in FastStore.
 
